# trv-monolith

./: Cargo.toml  README.md  SECURITY.md  differential_tester.py  export_timing_breakdown.py  impossible_differential_tester.py  integral_tester.py  sat_audit.py  sat_audit_carrychain_test.py  xor_control_test.py
Benchmark/: TRV_PERFORMANCE_REPORT.md
Benchmark/src/: aes_vs_trv.rs  kdf_vs_trv.rs  mac_vs_trv.rs  sha3_vs_trv.rs  sha3_vs_trv_parallel.rs  trv_rounds_sensitivity.rs
api/: main.rs
core/: crypto.rs  engine.rs  kdf.rs  mod.rs  vault.rs
docs/spec/: TRV_CRYPTANALYSIS_AUDIT.md  TRV_CRYPTANALYTIC_STRENGTH.md  TRV_GATE_SPEC.md
examples/: verify_attacks.rs
license/: BTGS_LICENSE.md  TRV_ENGINE_LICENSE.md
scripts/cryptanalysis/: cryptominisat_test.py  cube_tester.py  groebner_tester.py  rotational_tester.py  specialized_solver_comparison.py
tests/: cryptographic_tests.rs
